--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,16 @@
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/travanalys
+#spring.datasource.username=travanalys_admin
+#spring.datasource.password=password
+
+spring.config.import=optional:file:.env[.properties]
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/travanalys
-spring.datasource.username=travanalys_admin
-spring.datasource.password=password
+
+spring.profiles.active=dev
