--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,14 +17,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up JDK 17
+      # Step 2: Set executable permissions for Gradle wrapper
+      - name: Grant execute permission for Gradle wrapper
+        run: chmod +x ./gradlew
+
+      # Step 3: Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin' # You can use Zulu, AdoptOpenJDK, etc.
           java-version: '17'
 
-      # Step 3: Set up Gradle
+      # Step 4: Cache Gradle packages
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
@@ -33,27 +37,25 @@ jobs:
           restore-keys: |
             gradle-
 
-      # Step 4: Build the project using Gradle
+      # Step 5: Build the project using Gradle
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
-      # Step 5: Set up Docker Buildx
+      # Step 6: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 6: Log in to Docker Hub (if you're using Docker Hub)
+      # Step 7: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 7: Build and push the Docker image
+      # Step 8: Build and push the Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: your-dockerhub-username/your-repository-name:latest
-
-      # Optional Step 8: Run tests inside the Docker container (you can add tests here if needed)
