--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,43 +22,39 @@ jobs:
       - uses: actions/checkout@v4
         name: Check out code
 
-      # Step 2: Grant executable permission for Gradle wrapper
-      - name: Grant execute permission for Gradle wrapper
-        run: chmod +x ./gradlew
-
-      # Step 3: Set up JDK 20
+      # Step 2: Set up JDK 20 (same as your working Kotlin project)
       - name: Set up JDK 20
         uses: actions/setup-java@v4
         with:
           java-version: '20'
-          distribution: 'temurin'
-          cache: gradle
+          distribution: 'corretto'
+          cache: gradle  # Cache Gradle dependencies
 
-      # Step 4: Build the project using Gradle
+      # Step 3: Build the project using Gradle
       - name: Build with Gradle
         run: ./gradlew clean build
 
-      # Step 5: Set up Docker Buildx (for building Docker images)
+      # Step 4: Set up Docker Buildx (for building Docker images)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 6: Log in to Docker Hub (or GitHub Container Registry)
+      # Step 5: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 7: Build and push the Docker image to Docker Hub
+      # Step 6: Build and push the Docker image to Docker Hub
       - name: Build & push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
-          push: true  # Set to 'true' to push the image to Docker Hub
+          push: true
           tags: your-dockerhub-username/your-image-name:latest
 
-      # Step 8: Deploy to production (using Render.com or any other service)
+      # Step 7: Deploy to Render
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
