--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,10 @@ jobs:
       - uses: actions/checkout@v4
         name: Check out code
 
+      # **New Step**: Grant execute permission for Gradle wrapper
+      - name: Grant execute permission for Gradle wrapper
+        run: chmod +x ./gradlew
+
       # Step 2: Set up JDK 20 (Corretto)
       - name: Set up JDK 20 (Corretto)
         uses: actions/setup-java@v4
