--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI with Gradle and Corretto 20
+name: Docker Image CI with Gradle and OpenJDK 19
 
 on:
   push:
@@ -22,43 +22,43 @@ jobs:
       - uses: actions/checkout@v4
         name: Check out code
 
-      # **New Step**: Grant execute permission for Gradle wrapper
+      # Step 2: Grant execute permission for Gradle wrapper
       - name: Grant execute permission for Gradle wrapper
         run: chmod +x ./gradlew
 
-      # Step 2: Set up JDK 20 (Corretto)
-      - name: Set up JDK 20 (Corretto)
+      # Step 3: Set up JDK 19 (OpenJDK)
+      - name: Set up JDK 19
         uses: actions/setup-java@v4
         with:
-          java-version: '20'
-          distribution: 'corretto'
+          java-version: '19'
+          distribution: 'temurin'  # Temurin is the OpenJDK build provided by Eclipse Adoptium
           cache: gradle  # Cache Gradle dependencies
 
-      # Step 3: Build the project using Gradle
+      # Step 4: Build the project using Gradle
       - name: Build with Gradle
         run: ./gradlew clean build
 
-      # Step 4: Set up Docker Buildx (for building Docker images)
+      # Step 5: Set up Docker Buildx (for building Docker images)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 5: Log in to Docker Hub
+      # Step 6: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 6: Build and push the Docker image to Docker Hub
+      # Step 7: Build and push the Docker image to Docker Hub
       - name: Build & push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: your-dockerhub-username/your-image-name:latest
+          tags: your-dockerhub-username/your-image-name:latest  # Replace with your Docker Hub repo
 
-      # Step 7: Deploy to Render
+      # Step 8: Deploy to Render
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
