--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI with Gradle and OpenJDK 19
+name: Docker Image CI
 
 on:
   push:
@@ -18,47 +18,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the code from the repository
-      - uses: actions/checkout@v4
-        name: Check out code
+      - name: Check out code
+        uses: actions/checkout@v4
 
-      # Step 2: Grant execute permission for Gradle wrapper
-      - name: Grant execute permission for Gradle wrapper
-        run: chmod +x ./gradlew
-
-      # Step 3: Set up JDK 19 (OpenJDK)
       - name: Set up JDK 19
         uses: actions/setup-java@v4
         with:
+          distribution: 'temurin'  # Use 'corretto' if preferred
           java-version: '19'
-          distribution: 'temurin'  # Temurin is the OpenJDK build provided by Eclipse Adoptium
-          cache: gradle  # Cache Gradle dependencies
+          cache: gradle
 
-      # Step 4: Build the project using Gradle
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew build
 
-      # Step 5: Set up Docker Buildx (for building Docker images)
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      # Step 6: Log in to Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v6
         with:
+          image: your-dockerhub-username/your-image-name
+          tags: latest
+          registry: docker.io
+          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 7: Build and push the Docker image to Docker Hub
-      - name: Build & push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: your-dockerhub-username/your-image-name:latest  # Replace with your Docker Hub repo
-
-      # Step 8: Deploy to Render
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
