--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,14 +18,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-        name: Check out code
+      - name: Check out code
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 20
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '20'
-          distribution: 'corretto'  # You can change this to your preferred distribution, e.g., 'temurin' or 'zulu'
+          java-version: '21'
+          distribution: 'corretto'
           cache: gradle
 
       - name: Grant execute permission for Gradle Wrapper
@@ -34,8 +34,8 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - uses: mr-smithers-excellent/docker-build-push@v6
-        name: Build & push Docker image
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: your-dockerhub-username/your-java-app
           tags: latest
