--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'corretto'
           cache: gradle
 
@@ -32,7 +32,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew clean build
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6
