--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,9 +7,10 @@ on:
     branches: [ "master" ]
   workflow_dispatch:
 
-permissions:
-  contents: read
-  packages: write
+env:
+  build-number: ${{ github.run_number }}
+
+permissions: write-all
 
 jobs:
   build:
@@ -43,8 +44,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Deploy to Render
-        uses: render-examples/github-actions-deploy@v1
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
         with:
-          apiKey: ${{ secrets.MY_RENDER_API_KEY }}
-          serviceId: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
+          wait-for-success: false
