--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.security.oauth2.client.registration.github.client-secret=6e2297d7bf603086
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+frontend.url=${GITHUB_LOGIN_URL}
