.ENV for loggin githubbis

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=jdbc:postgresql://localhost:5432/postgres
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=hejsan123
-GITHUB_LOGIN_URL=http://localhost:5173
+LOGIN_URL=http://localhost:5173
 GITHUB_LOGIN_URL_PROD=https://travanalys.onrender.com/
