.ENV for loggin githubbis

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=hejsan123
 LOGIN_URL=http://localhost:5173
 GITHUB_LOGIN_URL_PROD=https://travanalys.onrender.com
+CLIENT_ID=Ov23liRt5luR4fxmgOs1
+CLIENT_SECRET=6e2297d7bf603086139bd86568dc86facb76c20f
