--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
-spring.security.oauth2.client.registration.github.client-id=Ov23liRt5luR4fxmgOs1
-spring.security.oauth2.client.registration.github.client-secret=6e2297d7bf603086139bd86568dc86facb76c20f
+spring.security.oauth2.client.registration.github.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${CLIENT_SECRET}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
