.ENV for loggin google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,13 @@ spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.security.oauth2.client.registration.github.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.scope=read:user,user:email
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 frontend.url=${LOGIN_URL}
+
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID_G}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET_G}
+spring.security.oauth2.client.registration.google.scope=https://www.googleapis.com/auth/userinfo.email
