--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DATABASE_URL=jdbc:postgresql://localhost:5432/postgres
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=hejsan123
 LOGIN_URL=http://localhost:5173
-GITHUB_LOGIN_URL_PROD=https://travanalys.onrender.com
 CLIENT_ID=Ov23liRt5luR4fxmgOs1
 CLIENT_SECRET=6e2297d7bf603086139bd86568dc86facb76c20f
+CLIENT_ID_G=1016889143083-bplisfejaauq66g9lejfcka68dp0fkme.apps.googleusercontent.com
+CLIENT_SECRET_G=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
