--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.security.oauth2.client.registration.github.client-secret=${CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.scope=read:user,user:email
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 frontend.url=${LOGIN_URL}
 
