.ENV for loggin google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ frontend.url=${LOGIN_URL}
 spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID_G}
 spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET_G}
 spring.security.oauth2.client.registration.google.scope=https://www.googleapis.com/auth/userinfo.email
+
+# Ensure cookies work in production
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=None
