Fixing shit DTO for horse to get analys to table XD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.security.oauth2.client.registration.github.scope=read:user,user:email
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+##Kan använda denna för att droppa DB i molnet med typ create-drop antar jag?
+## Kan också använda truncate i varje tabell i guess.
 
 frontend.url=${LOGIN_URL}
 
