--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.security.oauth2.client.registration.github.client-secret=${CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.scope=read:user,user:email
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 ##Kan använda denna för att droppa DB i molnet med typ create-drop antar jag?
 ## Kan också använda truncate i varje tabell i guess. det ska vara update vid DEPLOY!
 
