--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,20 +3,28 @@
 #spring.datasource.password=password
 
 spring.config.import=optional:file:.env[.properties]
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.driverClassName=org.postgresql.Driver
 
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=create-drop
+##Kan använda denna för att droppa DB i molnet med typ create-drop antar jag?
+## Kan också använda truncate i varje tabell i guess. det ska vara update vid DEPLOY!
+
+secondary.datasource.url=${SECONDARY_DATABASE_URL}
+secondary.datasource.username=${SECONDARY_DATABASE_USERNAME}
+secondary.datasource.password=${SECONDARY_DATABASE_PASSWORD}
+secondary.datasource.driver-class-name=org.postgresql.Driver
+secondary.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+secondary.jpa.hibernate.ddl-auto=create-drop
 
 spring.security.oauth2.client.registration.github.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.scope=read:user,user:email
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-##Kan använda denna för att droppa DB i molnet med typ create-drop antar jag?
-## Kan också använda truncate i varje tabell i guess. det ska vara update vid DEPLOY!
 
 frontend.url=${LOGIN_URL}
 
