--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 ##Kan använda denna för att droppa DB i molnet med typ create-drop antar jag?
 ## Kan också använda truncate i varje tabell i guess. det ska vara update vid DEPLOY!
 
