--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,10 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.hibernate.ddl-auto=update
 ##Kan använda denna för att droppa DB i molnet med typ create-drop antar jag?
 ## Kan också använda truncate i varje tabell i guess. det ska vara update vid DEPLOY!
+## Verkar ej fungera med update eller create-drop när vi har två configs för DB. Använd den i config filerna!
 
 secondary.datasource.url=${SECONDARY_DATABASE_URL}
 secondary.datasource.username=${SECONDARY_DATABASE_USERNAME}
@@ -20,7 +21,7 @@ secondary.datasource.password=${SECONDARY_DATABASE_PASSWORD}
 secondary.datasource.driver-class-name=org.postgresql.Driver
 secondary.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-secondary.jpa.hibernate.ddl-auto=update
+##secondary.jpa.hibernate.ddl-auto=update
 
 spring.security.oauth2.client.registration.github.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${CLIENT_SECRET}
